unpackaged/main/default/objects/n2de__Object_sync_action__c/n2de__Object_sync_action__c.object-meta.xml
<CustomObject>
    <label>Object sync action</label>
    <nameField>
        <label>Action name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object sync actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>