unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Action_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Action_type__c</fullName>
    <label>Action type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>