unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Distribution_object__c.field-meta.xml
<CustomField>
    <fullName>n2de__Distribution_object__c</fullName>
    <label>Distribution object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>