unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Is_active__c.field-meta.xml
<CustomField>
    <fullName>n2de__Is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>