unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Lookup_field_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Lookup_field_name__c</fullName>
    <label>Lookup field name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>