unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Related_object_filter_json__c.field-meta.xml
<CustomField>
    <fullName>n2de__Related_object_filter_json__c</fullName>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>