unpackaged/main/default/objects/n2de__Object_sync_action__c/fields/n2de__Related_object_filter_soql__c.field-meta.xml
<CustomField>
    <fullName>n2de__Related_object_filter_soql__c</fullName>
    <label>Related object filter soql</label>
    <length>255</length>
    <type>Text</type>
</CustomField>